fix(index): changed animations so wordsearch doesn't block the workbench
fixing the bug where invisible components were blocking mouse clicks on the
workbench textarea. Additionally, adjusted the animations to be cleaner and
logical as well as open help button click disabled after opened.

--- a/index.css
+++ b/index.css
@@ -314,12 +314,14 @@ legend {
     height: 40ch;
     overflow: hidden;
     opacity: 1;
-    transition: opacity 1.5s;
+    transition: opacity 1.5s ease;
     border-radius: 5px;
 }
 
 .search-dialog-container.hide {
     opacity: 0;
+    z-index: -1;
+    transition: opacity 10s, z-index 10s;
 }
 
 .search-dialog {
@@ -355,7 +357,7 @@ body.light .search-dialog {
 .search-dialog-help-container {
     display: inline-block;
     position: absolute;
-    right: 32ch;
+    right: 32.5ch;
     z-index: 11;
     width: 42ch;
     height: 39ch;
@@ -368,6 +370,8 @@ body.light .search-dialog {
 
 .search-dialog-help-container.hide {
     opacity: 0;
+    z-index: -1;
+    transition: opacity 15s, z-index 15s;
 }
 
 .search-dialog-help {
@@ -412,6 +416,5 @@ body.light .search-dialog {
     top: -0.5vh;
     right: 0;
     font-weight: bold;
-    cursor: pointer;
     background-color: transparent;
 }
